Compilation_Racket_Mips/piton/tests/errors/funcdef_in_else.py
if True:
    print_int(1)
else:
    def b():
        print_int(2)
